--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,13 @@
 <body>
   <h1>Automated Irrigation</h1>
 <form action="Moisture" method="POST"> 
-    <select placeholder="Water Pump Duration" name="soil">
-      <option style="display:none;" value="-">Water Moisture Requirement</option>
-      <option value="7">1</option>
+<p>
+</p>  
+  <label>Water Pump Duration</label>
+  <p>
+  </p>
+    <select name="soil">>
+      <option value="-"></option>
       <option value="8">2</option>
       <option value="9">3</option>
       <option value="10">4</option>
@@ -19,11 +23,12 @@
       <option value="13">7</option>
     </select>
 <p>
-
-</p>    
-    <select placeholder="Water Moisture Requirement" name="pump">
-      <option style="display:none;" value="-">Water Pump Duration</option>
-      <option value="7">1</option>
+</p>  
+  <label>Water Moisture Requirement</label>   
+  <p>
+  </p>
+    <select name="pump">
+      <option value="-"></option>
       <option value="8">2</option>
       <option value="9">3</option>
       <option value="10">4</option>
@@ -72,7 +77,7 @@
       <!--CSS start-->
       <style>
         body {
-          background-image: url("https://cdn.discordapp.com/attachments/672724997185470477/858844236690096188/web_background.png");
+          background-image: url("https://1drv.ms/u/s!AhRV9izJcYqK2FO31EjOn8oABnso");
           background-size: cover;
               }
       placeholder-shown{
@@ -92,7 +97,7 @@
           background-color: #f2f2f2;
           padding: 20px;
         }
-        .button {
+  .button {
   display: inline-block;
   border-radius: 4px;
   background-color: #000000;
@@ -134,15 +139,15 @@ button1 {
       font-size: 14px;
       text-align: center;
       cursor: pointer;
-      outline:#333300;
-      border:#333300;
-      color: #e9e9a7;
+      background-color: #000000;
+      border: none;
+      color: #ffffff;
       border-radius: 10px;}  
   
 button1:hover {
       background-color: #535300;
       border-radius: 10px;}
-
+      
         </style><!--CSS finish-->
         
         </head>
