--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,7 @@
       <!--CSS start-->
       <style>
         body {
-          background-image: url("https://1drv.ms/u/s!AhRV9izJcYqK2FO31EjOn8oABnso");
+          background-image: url("https://bn1304files.storage.live.com/y4m9Ws8y6QQPFVxhZLBehmLDZGrpYn_Ftivp7pzwLgnn1mw9F65H6p6lAPAqjdpC1ggF8Qa9QKK25qe9VcsGF13eap-ZWDYZ_oOI2OSbqG6aFMStffvJB3222sB8RJ6osw31nV2bgm5cLZb-S6ENavGwJKvE2Lac4SEBjfRiGRY_nD49-XsC6PiJ_-5VLMBShu4?width=4912&height=2333&cropmode=none");
           background-size: cover;
               }
       placeholder-shown{
@@ -145,8 +145,9 @@ button1 {
       border-radius: 10px;}  
   
 button1:hover {
-      background-color: #535300;
-      border-radius: 10px;}
+      background-color: #ffffff;
+      border: none;
+      color: #000000;
       
         </style><!--CSS finish-->
         
