--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,6 +79,7 @@
         body {
           background-image: url("https://bn1304files.storage.live.com/y4m9Ws8y6QQPFVxhZLBehmLDZGrpYn_Ftivp7pzwLgnn1mw9F65H6p6lAPAqjdpC1ggF8Qa9QKK25qe9VcsGF13eap-ZWDYZ_oOI2OSbqG6aFMStffvJB3222sB8RJ6osw31nV2bgm5cLZb-S6ENavGwJKvE2Lac4SEBjfRiGRY_nD49-XsC6PiJ_-5VLMBShu4?width=4912&height=2333&cropmode=none");
           background-size: cover;
+          color: #ffffff;
               }
       placeholder-shown{
               background-color: white}
