--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,9 +101,9 @@
   .button {
   display: inline-block;
   border-radius: 4px;
-  background-color: #000000;
+  color: #000000;
   border: none;
-  color: #ffffff;
+  background-color: #ffffff;
   text-align: center;
   font-size: 15px;
   padding: 20px;
@@ -140,17 +140,20 @@ button1 {
       font-size: 14px;
       text-align: center;
       cursor: pointer;
-      background-color: #000000;
-      border: none;
-      color: #ffffff;
-      border-radius: 10px;}  
-  
-button1:hover {
       background-color: #ffffff;
       border: none;
-      color: #000000;
+      color: #000000; 
+      border-radius: 10px;}
+
       
-        </style><!--CSS finish-->
+  
+button1:hover {
+      background-color: #2b2a33;
+      border: none;
+      color: #ffffff;
+      border-radius: 10px;} 
+      
+</style><!--CSS finish-->
         
         </head>
       </head>
