fixing array defualt issue

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,13 +53,13 @@ body, html {
             <p>
             </p>
               <select class="dropdown" name="soil">>
-                <option value="-"></option>
-                <option value="8">2</option>
-                <option value="9">3</option>
-                <option value="10">4</option>
-                <option value="11">5</option>
-                <option value="12">6</option>
-                <option value="13">7</option>
+                <option></option>
+                <option value=8 >2</option>
+                <option value=9 >3</option>
+                <option value=10 >4</option>
+                <option value=11 >5</option>
+                <option value=12 >6</option>
+                <option value=13 >7</option>
               </select>
           <p>
           </p>  
@@ -67,17 +67,21 @@ body, html {
             <p>
             </p>
               <select class="dropdown" name="pump">
-                <option value="-"></option>
-                <option value="8">2</option>
-                <option value="9">3</option>
-                <option value="10">4</option>
-                <option value="11">5</option>
-                <option value="12">6</option>
-                <option value="13">7</option>
+                <option></option>
+                <option value=8 >2</option>
+                <option value=9 >3</option>
+                <option value=10 >4</option>
+                <option value=11 >5</option>
+                <option value=12 >6</option>
+                <option value=13 >7</option>
               </select>
+              <button class="button" type="submit"><span>Submit</span></button><!--submit form-->
+          
+          </form>
           <p>
             
           </p>
+          <form>
             <section>
               <button1 id="custom">Custom Options</button1>
               <p>
