--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,9 +91,28 @@ body, html {
               <button id="hide3" class="button" type="submit"><span>Submit</span></button><!--submit form-->
             </section>  
             
-            
-          
-          </form>
+            <script>
+            const hide = document.querySelector("#hide");
+            const hide2 = document.querySelector("#hide2");
+            const hide3 = document.querySelector("#hide3");
+            const hide4 = document.querySelector("#hide4");
+            const hide5 = document.querySelector("#hide5");
+            const hide6 = document.querySelector("#hide6");
+            const hide7 = document.querySelector("#hide7");
+            const custom = document.querySelector("#custom");
+                            
+            custom.addEventListener("click", Custom);
+                            
+            function Custom (){
+             if (hide.style.display === "block") {hide.style.display = "none";} else {hide.style.display = "block";}
+             if (hide2.style.display === "block") {hide2.style.display = "none";} else {hide2.style.display = "block";}
+             if (hide3.style.display === "block") {hide3.style.display = "none";} else {hide3.style.display = "block";}
+             if (hide4.style.display === "none") {hide4.style.display = "block";} else {hide4.style.display = "none";}
+             if (hide5.style.display === "none") {hide5.style.display = "block";} else {hide5.style.display = "none";}
+             if (hide6.style.display === "none") {hide6.style.display = "block";} else {hide6.style.display = "none";}
+             if (hide7.style.display === "none") {hide7.style.display = "block";} else {hide7.style.display = "none";}
+            }
+          </script></form>
           
           
     <style>
