--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,7 +75,7 @@ body, html {
                 <option value=12 >6</option>
                 <option value=13 >7</option>
               </select>
-              <button class="button" type="submit"><span>Submit</span></button><!--submit form-->
+              <button id="hide8" class="button" type="submit"><span>Submit</span></button><!--submit form-->
           
           </form>
           <p>
@@ -83,7 +83,7 @@ body, html {
           </p>
           <form>
             <section>
-              <button1 id="custom">Custom Options</button1>
+              <button1  id="hide9" id="custom">Custom Options</button1>
               <p>
               </p>
               <input id="hide" style="display:none;" type="text" placeholder="Water Moisture Requirement [Voltage Resistance] e.g. 1.600" name="soil">
@@ -111,8 +111,10 @@ body, html {
              if (hide5.style.display === "none") {hide5.style.display = "block";} else {hide5.style.display = "none";}
              if (hide6.style.display === "none") {hide6.style.display = "block";} else {hide6.style.display = "none";}
              if (hide7.style.display === "none") {hide7.style.display = "block";} else {hide7.style.display = "none";}
+             if (hide8.style.display === "none") {hide8.style.display = "block";} else {hide8.style.display = "none";}
+             if (hide9.style.display === "none") {hide9.style.display = "block";} else {hide9.style.display = "none";}
             }
-          </script></form>
+             </script></form>
           
           
     <style>
@@ -134,6 +136,7 @@ body, html {
           border-radius: 20px;
           box-sizing: border-box;
           text-align:center;
+          align-self: center;
         }
 
         input[class=dropdown], select {
@@ -144,6 +147,7 @@ body, html {
           border-radius: 20px;
           box-sizing: border-box;
           text-align:left;
+          align-self: center;
         }
         
         div {
