--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,7 +83,7 @@ body, html {
           </p>
           <form>
             <section>
-              <button1  id="hide9" id="custom">Custom Options</button1>
+              <button1 id="custom">Custom Options</button1>
               <p>
               </p>
               <input id="hide" style="display:none;" type="text" placeholder="Water Moisture Requirement [Voltage Resistance] e.g. 1.600" name="soil">
@@ -112,7 +112,6 @@ body, html {
              if (hide6.style.display === "none") {hide6.style.display = "block";} else {hide6.style.display = "none";}
              if (hide7.style.display === "none") {hide7.style.display = "block";} else {hide7.style.display = "none";}
              if (hide8.style.display === "none") {hide8.style.display = "block";} else {hide8.style.display = "none";}
-             if (hide9.style.display === "none") {hide9.style.display = "block";} else {hide9.style.display = "none";}
             }
              </script></form>
           
