--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,14 +128,14 @@ body, html {
              if (hide8.style.display === "none") {hide8.style.display = "block";} else {hide8.style.display = "none";}
             }
             function Preset (){
-             if (hide.style.display === "none") {hide.style.display = "block";} else {hide.style.display = "none";}
-             if (hide2.style.display === "none") {hide2.style.display = "block";} else {hide2.style.display = "none";}
-             if (hide3.style.display === "none") {hide3.style.display = "block";} else {hide3.style.display = "none";}
-             if (hide4.style.display === "block") {hide4.style.display = "none";} else {hide4.style.display = "block";}
-             if (hide5.style.display === "block") {hide5.style.display = "none";} else {hide5.style.display = "block";}
-             if (hide6.style.display === "block") {hide6.style.display = "none";} else {hide6.style.display = "block";}
-             if (hide7.style.display === "block") {hide7.style.display = "none";} else {hide7.style.display = "block";}
-             if (hide8.style.display === "block") {hide8.style.display = "none";} else {hide8.style.display = "block";}
+             if (hide.style.display === "block") {hide.style.display = "none";} else {hide.style.display = "block";}
+             if (hide2.style.display === "block") {hide2.style.display = "none";} else {hide2.style.display = "block";}
+             if (hide3.style.display === "block") {hide3.style.display = "none";} else {hide3.style.display = "block";}
+             if (hide4.style.display === "none") {hide4.style.display = "block";} else {hide4.style.display = "none";}
+             if (hide5.style.display === "none") {hide5.style.display = "block";} else {hide5.style.display = "none";}
+             if (hide6.style.display === "none") {hide6.style.display = "block";} else {hide6.style.display = "none";}
+             if (hide7.style.display === "none") {hide7.style.display = "block";} else {hide7.style.display = "none";}
+             if (hide8.style.display === "none") {hide8.style.display = "block";} else {hide8.style.display = "none";}
             }
              </script></form>
           
