--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,32 +83,32 @@ body, html {
           </p>
           <form>
             <section>
-                <button id="custom" class="saveBtn">Save</button>
-                <script>const btn = document.getElementById("custom");
-
-
-              btn.onclick = function(){
-              console.log(btn.classList.value)
-                if (btn.classList.contains("saveBtn")){                  
-                  btn.classList.remove("saveBtn")
-                  btn.classList.add("btnUnsave")
-                  btn.innerText = "Unsave"
-                      if (hide.style.display === "block") {hide.style.display = "none";} else {hide.style.display = "block";}
-                      if (hide2.style.display === "block") {hide2.style.display = "none";} else {hide2.style.display = "block";}
-                      if (hide3.style.display === "block") {hide3.style.display = "none";} else {hide3.style.display = "block";}
-                      if (hide4.style.display === "none") {hide4.style.display = "block";} else {hide4.style.display = "none";}
-                      if (hide5.style.display === "none") {hide5.style.display = "block";} else {hide5.style.display = "none";}
-                      if (hide6.style.display === "none") {hide6.style.display = "block";} else {hide6.style.display = "none";}
-                      if (hide7.style.display === "none") {hide7.style.display = "block";} else {hide7.style.display = "none";}
-                      if (hide8.style.display === "none") {hide8.style.display = "block";} else {hide8.style.display = "none";}
-                      
-                        
-                } else {              
-                  btn.classList.add("saveBtn")
-                  btn.classList.remove("btnUnsave")
-                  btn.innerText = "Save"
+              <form id="change">
+                <button1 id="custom" type="button" onclick="hideOnClk(this.id)">Custom options</button1>
+                <button1 id="preset" type="button" class="hide" onclick="hideOnClk(this.id)">Preset Options</button1>
+            </form><script>
+              function hideOnClk(id){
+                if(id == "preset"){
+                  document.getElementById("custom").style.display="block";
+                  document.getElementById(id).style.display="none";
+                }else{
+                  document.getElementById("preset").style.display="block";
+                  document.getElementById(id).style.display="none";
                 }
-              } </script>
+             } 
+             
+            const custom = document.querySelector("#custom");
+            const preset = document.querySelector("#preset");
+            custom.addEventListener("click", Custom);
+            preset.addEventListener("click", Preset);
+                            
+            function Custom (){
+             if (hide.style.display === "block") {hide.style.display = "none";} else {hide.style.display = "block";}
+            }
+            function Preset (){
+             if (hide.style.display === "none") {hide.style.display = "block";} else {hide.style.display = "none";}
+            }
+             </script>
               <p>
               </p>
               <input id="hide" style="display:none;" type="text" placeholder="Water Moisture Requirement [Voltage Resistance] e.g. 1.600" name="soil">
@@ -116,29 +116,7 @@ body, html {
               <button id="hide3" class="button" type="submit"><span>Submit</span></button><!--submit form-->
             </section>  
             
-            <script>
-            const hide = document.querySelector("#hide");
-            const hide2 = document.querySelector("#hide2");
-            const hide3 = document.querySelector("#hide3");
-            const hide4 = document.querySelector("#hide4");
-            const hide5 = document.querySelector("#hide5");
-            const hide6 = document.querySelector("#hide6");
-            const hide7 = document.querySelector("#hide7");
-            const custom = document.querySelector("#custom");
-                            
-            custom.addEventListener("click", Custom);
-                            
-            function Custom (){
-             if (hide.style.display === "block") {hide.style.display = "none";} else {hide.style.display = "block";}
-             if (hide2.style.display === "block") {hide2.style.display = "none";} else {hide2.style.display = "block";}
-             if (hide3.style.display === "block") {hide3.style.display = "none";} else {hide3.style.display = "block";}
-             if (hide4.style.display === "none") {hide4.style.display = "block";} else {hide4.style.display = "none";}
-             if (hide5.style.display === "none") {hide5.style.display = "block";} else {hide5.style.display = "none";}
-             if (hide6.style.display === "none") {hide6.style.display = "block";} else {hide6.style.display = "none";}
-             if (hide7.style.display === "none") {hide7.style.display = "block";} else {hide7.style.display = "none";}
-             if (hide8.style.display === "none") {hide8.style.display = "block";} else {hide8.style.display = "none";}
-            }
-             </script></form>
+            </form>
           
           
     <style>
