--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,48 +4,52 @@
     <meta charset="UTF-8" content="width=device-width, initial-scale=1">
     <title>Databases/Index/Home</title>
 </head>
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.bg-image {
-  height: 70%; 
-  
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.bg-text {
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0, 0.4); 
-  color: white;
-  font-weight: bold;
-  border: 10px solid #ffffff;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 500px;
-  padding: 20px;
-  text-align: center;
-}
-</style>
-</head>
 <body>
 
 <div class="bg-text">
 	<body>
         <body>
             <h1>Automated Irrigation</h1>
+            <form id="change">
+              <button1 width=100% id="custom" type="button" onclick="hideOnClk(this.id)">Custom options</button1>
+              <button1 width=100% id="preset" type="button" class="hide" onclick="hideOnClk(this.id)">Preset Options</button1>
+          </form><script>
+            function hideOnClk(id){
+              if(id == "preset"){
+                document.getElementById("custom").style.display="block";
+                document.getElementById(id).style.display="none";
+              }else{
+                document.getElementById("preset").style.display="block";
+                document.getElementById(id).style.display="none";
+              }
+           } 
+           
+          const custom = document.querySelector("#custom");
+          const preset = document.querySelector("#preset");
+          custom.addEventListener("click", Custom);
+          preset.addEventListener("click", Preset);
+                          
+          function Custom (){
+           if (hide.style.display === "block") {hide.style.display = "none";} else {hide.style.display = "block";}
+           if (hide2.style.display === "block") {hide2.style.display = "none";} else {hide2.style.display = "block";}
+           if (hide3.style.display === "block") {hide3.style.display = "none";} else {hide3.style.display = "block";}
+           if (hide4.style.display === "none") {hide4.style.display = "block";} else {hide4.style.display = "none";}
+           if (hide5.style.display === "none") {hide5.style.display = "block";} else {hide5.style.display = "none";}
+           if (hide6.style.display === "none") {hide6.style.display = "block";} else {hide6.style.display = "none";}
+           if (hide7.style.display === "none") {hide7.style.display = "block";} else {hide7.style.display = "none";}
+           if (hide8.style.display === "none") {hide8.style.display = "block";} else {hide8.style.display = "none";}
+           }
+          function Preset (){
+           if (hide.style.display === "none") {hide.style.display = "block";} else {hide.style.display = "none";}
+           if (hide2.style.display === "none") {hide2.style.display = "block";} else {hide2.style.display = "none";}
+           if (hide3.style.display === "none") {hide3.style.display = "block";} else {hide3.style.display = "none";}
+           if (hide4.style.display === "block") {hide4.style.display = "none";} else {hide4.style.display = "block";}
+           if (hide5.style.display === "block") {hide5.style.display = "none";} else {hide5.style.display = "block";}
+           if (hide6.style.display === "block") {hide6.style.display = "none";} else {hide6.style.display = "block";}
+           if (hide7.style.display === "block") {hide7.style.display = "none";} else {hide7.style.display = "block";}
+           if (hide8.style.display === "block") {hide8.style.display = "none";} else {hide8.style.display = "block";}
+           }
+           </script>
           <form action="Moisture" method="POST"> 
           <p>
           </p>  
@@ -82,53 +86,11 @@ body, html {
             
           </p>
           <form>
-            <section>
-              <form id="change">
-                <button1 id="custom" type="button" onclick="hideOnClk(this.id)">Custom options</button1>
-                <button1 id="preset" type="button" class="hide" onclick="hideOnClk(this.id)">Preset Options</button1>
-            </form><script>
-              function hideOnClk(id){
-                if(id == "preset"){
-                  document.getElementById("custom").style.display="block";
-                  document.getElementById(id).style.display="none";
-                }else{
-                  document.getElementById("preset").style.display="block";
-                  document.getElementById(id).style.display="none";
-                }
-             } 
-             
-            const custom = document.querySelector("#custom");
-            const preset = document.querySelector("#preset");
-            custom.addEventListener("click", Custom);
-            preset.addEventListener("click", Preset);
-                            
-            function Custom (){
-             if (hide.style.display === "block") {hide.style.display = "none";} else {hide.style.display = "block";}
-             if (hide2.style.display === "block") {hide2.style.display = "none";} else {hide2.style.display = "block";}
-             if (hide3.style.display === "block") {hide3.style.display = "none";} else {hide3.style.display = "block";}
-             if (hide4.style.display === "none") {hide4.style.display = "block";} else {hide4.style.display = "none";}
-             if (hide5.style.display === "none") {hide5.style.display = "block";} else {hide5.style.display = "none";}
-             if (hide6.style.display === "none") {hide6.style.display = "block";} else {hide6.style.display = "none";}
-             if (hide7.style.display === "none") {hide7.style.display = "block";} else {hide7.style.display = "none";}
-             if (hide8.style.display === "none") {hide8.style.display = "block";} else {hide8.style.display = "none";}
-             }
-            function Preset (){
-             if (hide.style.display === "none") {hide.style.display = "block";} else {hide.style.display = "none";}
-             if (hide2.style.display === "none") {hide2.style.display = "block";} else {hide2.style.display = "none";}
-             if (hide3.style.display === "none") {hide3.style.display = "block";} else {hide3.style.display = "none";}
-             if (hide4.style.display === "block") {hide4.style.display = "none";} else {hide4.style.display = "block";}
-             if (hide5.style.display === "block") {hide5.style.display = "none";} else {hide5.style.display = "block";}
-             if (hide6.style.display === "block") {hide6.style.display = "none";} else {hide6.style.display = "block";}
-             if (hide7.style.display === "block") {hide7.style.display = "none";} else {hide7.style.display = "block";}
-             if (hide8.style.display === "block") {hide8.style.display = "none";} else {hide8.style.display = "block";}
-             }
-             </script>
               <p>
               </p>
               <input id="hide" style="display:none;" type="text" placeholder="Water Moisture Requirement [Voltage Resistance] e.g. 1.600" name="soil">
               <input id="hide2" style="display:none;" type="text" placeholder="Water Pump Duration [Seconds] e.g. 6000" name="pump">
               <button id="hide3" class="button" type="submit"><span>Submit</span></button><!--submit form-->
-            </section>  
             
             </form>
           
@@ -144,6 +106,10 @@ body, html {
       placeholder-shown{
               background-color: #ffffff}
 
+              .hide {
+    display:none;
+}
+
         input[type=text], select {
           width: 100%;
           padding: 12px 20px;
@@ -156,7 +122,7 @@ body, html {
         }
 
         input[class=dropdown], select {
-          width: 70%;
+          width: 100%;
           padding: 12px 20px;
           margin: 8px 0;
           display: inline-block;
@@ -216,10 +182,10 @@ button1 {
       background-color: #ffffff;
       border: none;
       color: #000000; 
-      border-radius: 10px;}
-
+      border-radius: 10px;
+}
       
-  
+
 button1:hover {
       background-color: #2b2a33;
       border: none;
@@ -241,6 +207,40 @@ button1:hover {
       font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
       color: #ffffff;
       }
+      body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.bg-image {
+  height: 70%; 
+  
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bg-text {
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0, 0.4); 
+  color: white;
+  font-weight: bold;
+  border: 10px solid #ffffff;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 500px;
+  padding: 20px;
+  text-align: center;
+}
+
       </style>
 </div>
 
