--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,8 @@
         <body>
             <h1>Automated Irrigation</h1>
             <form id="change">
-              <button1 width=100% id="custom" type="button" onclick="hideOnClk(this.id)">Custom options</button1>
-              <button1 width=100% id="preset" type="button" class="hide" onclick="hideOnClk(this.id)">Preset Options</button1>
+              <button1 id="custom" type="button" onclick="hideOnClk(this.id)">Custom options</button1>
+              <button1 id="preset" type="button" class="hide" onclick="hideOnClk(this.id)">Preset Options</button1>
           </form><script>
             function hideOnClk(id){
               if(id == "preset"){
@@ -85,13 +85,12 @@
           <p>
             
           </p>
-          <form>
+          <form action="Moisture" method="POST">
               <p>
               </p>
               <input id="hide" style="display:none;" type="text" placeholder="Water Moisture Requirement [Voltage Resistance] e.g. 1.600" name="soil">
               <input id="hide2" style="display:none;" type="text" placeholder="Water Pump Duration [Seconds] e.g. 6000" name="pump">
-              <button id="hide3" class="button" type="submit"><span>Submit</span></button><!--submit form-->
-            
+              <button id="hide3" class="button" type="submit"><span>Submit</span></button><!--submit form--> 
             </form>
           
           
@@ -129,7 +128,6 @@
           border-radius: 20px;
           box-sizing: border-box;
           text-align:left;
-          align-self: center;
         }
         
         div {
@@ -151,6 +149,7 @@
   cursor: pointer;
   margin: 5px;
   border-radius: 50px;
+  align-items: center;
 }
 .button span {
   cursor: pointer;
@@ -183,6 +182,7 @@ button1 {
       border: none;
       color: #000000; 
       border-radius: 10px;
+      width: 100%;
 }
       
 
