--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,248 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" content="width=device-width, initial-scale=1">
-    <title>Databases/Index/Home</title>
+    <meta charset="UTF-8" content="width=device-width, initial-scale=1"> <!-- scales the website to the width of the screen -->
+    <title>Databases/Index/Home</title> <!-- title of the tab -->
+    <link rel="stylesheet" href="index-css.css">
 </head>
 <body>
 
 <div class="bg-text">
-	<body>
-        <body>
-            <h1>Automated Irrigation</h1>
-            <form id="change">
-              <button1 id="custom" type="button" onclick="hideOnClk(this.id)">Custom options</button1>
-              <button1 id="preset" type="button" class="hide" onclick="hideOnClk(this.id)">Preset Options</button1>
-          </form><script>
-            function hideOnClk(id){
-              if(id == "preset"){
-                document.getElementById("custom").style.display="block";
-                document.getElementById(id).style.display="none";
-              }else{
-                document.getElementById("preset").style.display="block";
-                document.getElementById(id).style.display="none";
-              }
-           } 
+<body>
+<h1>Automated Irrigation</h1>
+<form id="change">
+  <button1 id="custom" type="button" onclick="hideOnClk(this.id)">Custom options</button1>
+  <button1 id="preset" type="button" class="hide" onclick="hideOnClk(this.id)">Preset Options</button1> 
+  <!-- buttons which change what input method is used on the website -->
+</form>
+<script>
+  function hideOnClk(id){
+    if(id == "preset"){
+      document.getElementById("custom").style.display="block";
+      document.getElementById(id).style.display="none";}
+    else{
+      document.getElementById("preset").style.display="block";
+      document.getElementById(id).style.display="none";}
+  } 
            
-          const custom = document.querySelector("#custom");
-          const preset = document.querySelector("#preset");
-          custom.addEventListener("click", Custom);
-          preset.addEventListener("click", Preset);
+    const custom = document.querySelector("#custom");
+    const preset = document.querySelector("#preset");
+    custom.addEventListener("click", Custom);
+    preset.addEventListener("click", Preset);
                           
-          function Custom (){
-           if (hide.style.display === "block") {hide.style.display = "none";} else {hide.style.display = "block";}
-           if (hide2.style.display === "block") {hide2.style.display = "none";} else {hide2.style.display = "block";}
-           if (hide3.style.display === "block") {hide3.style.display = "none";} else {hide3.style.display = "block";}
-           if (hide4.style.display === "none") {hide4.style.display = "block";} else {hide4.style.display = "none";}
-           if (hide5.style.display === "none") {hide5.style.display = "block";} else {hide5.style.display = "none";}
-           if (hide6.style.display === "none") {hide6.style.display = "block";} else {hide6.style.display = "none";}
-           if (hide7.style.display === "none") {hide7.style.display = "block";} else {hide7.style.display = "none";}
-           if (hide8.style.display === "none") {hide8.style.display = "block";} else {hide8.style.display = "none";}
-           }
-          function Preset (){
-           if (hide.style.display === "none") {hide.style.display = "block";} else {hide.style.display = "none";}
-           if (hide2.style.display === "none") {hide2.style.display = "block";} else {hide2.style.display = "none";}
-           if (hide3.style.display === "none") {hide3.style.display = "block";} else {hide3.style.display = "none";}
-           if (hide4.style.display === "block") {hide4.style.display = "none";} else {hide4.style.display = "block";}
-           if (hide5.style.display === "block") {hide5.style.display = "none";} else {hide5.style.display = "block";}
-           if (hide6.style.display === "block") {hide6.style.display = "none";} else {hide6.style.display = "block";}
-           if (hide7.style.display === "block") {hide7.style.display = "none";} else {hide7.style.display = "block";}
-           if (hide8.style.display === "block") {hide8.style.display = "none";} else {hide8.style.display = "block";}
-           }
-           </script>
-          <form action="Moisture" method="POST"> 
-          <p>
-          </p>  
-            <label id="hide6" >Water Pump Duration</label>
-            <p>
-            </p>
-              <select id="hide4" class="dropdown" name="soil">>
-                <option></option>
-                <option value=8 >2</option>
-                <option value=9 >3</option>
-                <option value=10 >4</option>
-                <option value=11 >5</option>
-                <option value=12 >6</option>
-                <option value=13 >7</option>
-              </select>
-          <p>
-          </p>  
-            <label id="hide7" >Water Moisture Requirement</label>   
-            <p>
-            </p>
-              <select id="hide5" class="dropdown" name="pump">
-                <option></option>
-                <option value=8 >2</option>
-                <option value=9 >3</option>
-                <option value=10 >4</option>
-                <option value=11 >5</option>
-                <option value=12 >6</option>
-                <option value=13 >7</option>
-              </select>
-              <button id="hide8" class="button" type="submit"><span>Submit</span></button><!--submit form-->
+  function Custom (){
+    if (hide.style.display === "block") {hide.style.display = "none";} else {hide.style.display = "block";}
+    if (hide2.style.display === "block") {hide2.style.display = "none";} else {hide2.style.display = "block";}
+    if (hide3.style.display === "block") {hide3.style.display = "none";} else {hide3.style.display = "block";}
+    if (hide4.style.display === "none") {hide4.style.display = "block";} else {hide4.style.display = "none";}
+    if (hide5.style.display === "none") {hide5.style.display = "block";} else {hide5.style.display = "none";}
+    if (hide6.style.display === "none") {hide6.style.display = "block";} else {hide6.style.display = "none";}
+    if (hide7.style.display === "none") {hide7.style.display = "block";} else {hide7.style.display = "none";}
+    if (hide8.style.display === "none") {hide8.style.display = "block";} else {hide8.style.display = "none";}
+  } // what is hidden and shown whenthe button "custom" is pressed 
           
-          </form>
-          <p>
-            
-          </p>
-          <form action="Moisture" method="POST">
-              <p>
-              </p>
-              <input id="hide" style="display:none;" type="text" placeholder="Water Moisture Requirement [Voltage Resistance] e.g. 1.600" name="soil">
-              <input id="hide2" style="display:none;" type="text" placeholder="Water Pump Duration [Seconds] e.g. 6000" name="pump">
-              <button id="hide3" class="button" type="submit"><span>Submit</span></button><!--submit form--> 
-            </form>
-          
-          
-    <style>
+  function Preset (){
+    if (hide.style.display === "none") {hide.style.display = "block";} else {hide.style.display = "none";}
+    if (hide2.style.display === "none") {hide2.style.display = "block";} else {hide2.style.display = "none";}
+    if (hide3.style.display === "none") {hide3.style.display = "block";} else {hide3.style.display = "none";}
+    if (hide4.style.display === "block") {hide4.style.display = "none";} else {hide4.style.display = "block";}
+    if (hide5.style.display === "block") {hide5.style.display = "none";} else {hide5.style.display = "block";}
+    if (hide6.style.display === "block") {hide6.style.display = "none";} else {hide6.style.display = "block";}
+    if (hide7.style.display === "block") {hide7.style.display = "none";} else {hide7.style.display = "block";}
+    if (hide8.style.display === "block") {hide8.style.display = "none";} else {hide8.style.display = "block";}
+  } // what is hidden and shown whenthe button "preset" is pressed
+</script> 
 
-      body {
-        height: 100%;
-          background-image: url("https://bn1304files.storage.live.com/y4m9Ws8y6QQPFVxhZLBehmLDZGrpYn_Ftivp7pzwLgnn1mw9F65H6p6lAPAqjdpC1ggF8Qa9QKK25qe9VcsGF13eap-ZWDYZ_oOI2OSbqG6aFMStffvJB3222sB8RJ6osw31nV2bgm5cLZb-S6ENavGwJKvE2Lac4SEBjfRiGRY_nD49-XsC6PiJ_-5VLMBShu4?width=4912&height=2333&cropmode=none");
-          background-size: cover;
-          color: #ffffff;
-              }
-      placeholder-shown{
-              background-color: #ffffff}
+<form action="Moisture" method="POST"> <!-- when submit button is pressed then the form is posted to the collecton mositure -->
+    <p></p>  
+  <label id="hide6" >Water Pump Duration</label>
+    <p></p>  
+  <select id="hide4" class="dropdown" name="soil">
+    <option value=8 >2</option>
+    <option value=9 >3</option>
+    <option value=10 >4</option>
+    <option value=11 >5</option>
+    <option value=12 >6</option>
+    <option value=13 >7</option>
+  </select> <!-- dropdown options for water pump runtime -->
+    <p></p>   
+  <label id="hide7" >Water Moisture Requirement</label>   
+    <p></p>  
+  <select id="hide5" class="dropdown" name="pump">
+    <option></option>
+    <option value=8 >2</option>
+    <option value=9 >3</option>
+    <option value=10 >4</option>
+    <option value=11 >5</option>
+    <option value=12 >6</option>
+    <option value=13 >7</option>
+  </select> <!-- dropdown options for soil mositure requirements -->
+  <button id="hide8" class="button" type="submit"><span>Submit</span></button><!--submits dropdown form-->
+</form>
 
-              .hide {
-    display:none;
-}
+<form action="Moisture" method="POST">
+    <p></p>  
+  <input id="hide" style="display:none;" type="text" placeholder="Water Moisture Requirement [Voltage Resistance] e.g. 1.600" name="soil">
+  <input id="hide2" style="display:none;" type="text" placeholder="Water Pump Duration [Seconds] e.g. 6000" name="pump"> <!-- text input bar for specific/customised enteries-->
+  <button id="hide3" class="button" type="submit"><span>Submit</span></button><!--submit form--> 
+</form>
 
-        input[type=text], select {
-          width: 100%;
-          padding: 12px 20px;
-          margin: 8px 0;
-          display: inline-block;
-          border-radius: 20px;
-          box-sizing: border-box;
-          text-align:center;
-          align-self: center;
-        }
-
-        input[class=dropdown], select {
-          width: 100%;
-          padding: 12px 20px;
-          margin: 8px 0;
-          display: inline-block;
-          border-radius: 20px;
-          box-sizing: border-box;
-          text-align:left;
-        }
-        
-        div {
-          border-radius: 5px;
-          background-color: #ffffff;
-          padding: 20px;
-        }
-  .button {
-  display: inline-block;
-  border-radius: 4px;
-  color: #000000;
-  border: none;
-  background-color: #ffffff;
-  text-align: center;
-  font-size: 15px;
-  padding: 20px;
-  width: 200px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
-  border-radius: 50px;
-  align-items: center;
-}
-.button span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-.button span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-.button:hover span {
-  padding-right: 25px;
-}
-.button:hover span:after {
-  opacity: 1;
-  right: 0;
-}
-
-button1 {
-      padding: 8px 8px;
-      font-size: 14px;
-      text-align: center;
-      cursor: pointer;
-      background-color: #ffffff;
-      border: none;
-      color: #000000; 
-      border-radius: 10px;
-      width: 100%;
-}
-      
-
-button1:hover {
-      background-color: #2b2a33;
-      border: none;
-      color: #ffffff;
-      border-radius: 10px;} 
-      
-      p {
-      font-size: 18px;
-      color: #ffffff;
-      }
-
-      p2 {
-      font-size: 14px;
-      color: #ffffff;
-      }
-
-      h1{
-      font-size: 40px;  
-      font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      color: #ffffff;
-      }
-      body, html {
-  height: 100%;
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.bg-image {
-  height: 70%; 
-  
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.bg-text {
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0, 0.4); 
-  color: white;
-  font-weight: bold;
-  border: 10px solid #ffffff;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 500px;
-  padding: 20px;
-  text-align: center;
-}
-
-      </style>
-</div>
-
-</body>
-</html>
+</div></body></html>
