--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,6 +58,7 @@
   <label id="hide6" >Water Pump Duration</label>
     <p></p>  
   <select id="hide4" class="dropdown" name="soil">
+    <option></option>
     <option value=8 >2</option>
     <option value=9 >3</option>
     <option value=10 >4</option>
